--- a/src/component/pages/Shows/shows.css
+++ b/src/component/pages/Shows/shows.css
@@ -1,87 +1,110 @@
-.shows-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-    place-content: center;
-    background: #0000005d;
+.shows-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  place-content: center;
+  background: #0000005d;
+  margin-bottom: 1rem;
+  /* margin: 1rem; */
+  border-radius: 5px;
+}
+.show_bg {
+  position: relative;
+  /* background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../../assets/Tes/16.jpg); */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* margin-bottom: 2rem; */
+  height: 100vh;
+}
+
+.show_slide {
+  display: flex;
+  justify-content: center;
+}
+
+.content_show p {
+  margin: 2rem;
+  color: rgb(190, 190, 190);
+  text-align: justify;
+}
+
+/* ======== MEDIA QUERIES(MEDIUM DEVICES)====== */
+@media screen and (max-width: 1024px) {
+  .shows-container {
+    grid-template-columns: 1fr;
+    gap: 1.2rem;
     margin-bottom: 1rem;
-    /* margin: 1rem; */
-    border-radius: 5px;
-}
-.show_bg{
-    position: relative;
-    background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../../assets/Tes/16.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    /* margin-bottom: 2rem; */
-    height:100vh;
-    
   }
-  
-  .show_slide{
-    display: flex;
-    justify-content: center;
-    
+  .show_bg {
+    height: auto;
   }
-
-.content_show p{
-    margin: 2rem;
-    color: rgb(190, 190, 190);
-    text-align: justify;
 }
 
+/* ======== MEDIA QUERIES(Small DEVICES)====== */
 
-  /* ======== MEDIA QUERIES(MEDIUM DEVICES)====== */
-  @media screen and (max-width:1024px) {
-    .shows-container{
-        grid-template-columns: 1fr;
-        gap:1.2rem;
-        margin-bottom: 1rem;
-    }  
-    .show_bg{
-        height:auto;
-        
-      }  
-     
-} 
-    
-    /* ======== MEDIA QUERIES(Small DEVICES)====== */
-    
-      @media screen and (max-width:600px) {
-    .shows-container{
-        grid-template-columns: 1fr;
-        gap:1rem;
-    }
-    .show_bg{
-        height:auto;
-        
-      } 
+@media screen and (max-width: 600px) {
+  .shows-container {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+  .show_bg {
+    height: auto;
+  }
+}
 
-    }
+.div_outer {
+  position: relative;
+}
 
-    .div_outer{
-        position: relative;
-    }
+.div_inner1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #2b2b2b;
+  transform: translate(3%, 3%);
+}
+.div_inner2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #3d3d3d;
+  transform: translate(2%, 2%);
+}
+.div_inner3 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #585858;
+  transform: translate(1%, 1%);
+}
 
-    .div_inner1{
-        position: absolute;
-        width:100% ;
-        height: 100%;
-        background: #2b2b2b;
-        transform: translate(3%, 3%);
-    }
-    .div_inner2{
-        position: absolute;
-        width:100% ;
-        height: 100%;
-        background: #3d3d3d;
-        transform: translate(2%, 2%);
-    }
-    .div_inner3{
-        position: absolute;
-        width:100% ;
-        height: 100%;
-        background: #585858;
-        transform: translate(1%, 1%);
-    }
+.achievement-section-container1 {
+  text-align: center;
+  padding: 60px 120px;
+}
+.small-gray-text {
+  color: gray;
+  font-size: 0.8rem;
+}
+.medium-text {
+  color: #2b2b2b;
+  font-size: 1.2rem;
+}
+.achievement-section-container2 {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 80px;
+}
+.content-right-image {
+  width: 540px;
+  height: 400px;
+  padding: 0 10px;
+}
+.achievement-section h1 {
+  text-align: center;
+  padding-top: 40px;
+}
+.achievement-section-carousel {
+  background-color: #f5f9ff;
+}
